data/derived/sp14/progs/unify/prog1662.ml.out
Characters 8-17:
  let _ = abs_float -.40;;
          ^^^^^^^^^
Error: This expression has type float -> float
       but an expression was expected of type float
